*paws at puppycrawl and staring into its eyes while pushing of some enderios from the table* See? I'm stwongew!